Change CI/CD workflow branch to FrontendplusTests

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,9 +2,9 @@ name: MoneyMentor CI/CD
 
 on:
   push:
-    branches: [ main ]
+    branches: [ FrontendplusTests ]
   pull_request:
-    branches: [ main ]
+    branches: [ FrontendplusTests ]
 
 jobs:
   # 🔹 1. Continuous Integration (Build + Lint + Test)
