--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "lucide-react": "^0.454.0",
     "next": "^15.5.4",
     "next-themes": "latest",
+    "node.js": "^0.0.1-security",
     "react": "^19",
     "react-day-picker": "latest",
     "react-dom": "^19",
