--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "^2.76.1",
     "@vercel/analytics": "1.3.1",
-    "ai": "latest",
+    "ai": "5.0.60",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -65,7 +65,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "latest",
-    "zod": "3.25.67"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
