Implement piechart and overall page responsiveness
Refactored layout, fixed colors, improved spacing, added adaptive labels.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@hookform/resolvers": "^3.10.0",
+    "@mui/x-charts": "^8.20.0",
     "@radix-ui/react-accordion": "latest",
     "@radix-ui/react-alert-dialog": "latest",
     "@radix-ui/react-aspect-ratio": "latest",
