Updated-final-features
Added toggle buttons on Sign up and Log In Screen. Fixed bugs in Transaction page. Fixed logics in Budget.

--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "@mlc-ai/web-llm": "^0.2.80",
     "@radix-ui/react-accordion": "latest",
     "@radix-ui/react-alert-dialog": "latest",
     "@radix-ui/react-aspect-ratio": "latest",
@@ -40,7 +44,7 @@
     "@shadcn/ui": "^0.0.4",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "latest",
-    "@supabase/supabase-js": "^2.76.1",
+    "@supabase/supabase-js": "^2.86.0",
     "@vercel/analytics": "1.3.1",
     "ai": "5.0.60",
     "autoprefixer": "^10.4.20",
@@ -68,17 +72,31 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^13.0.0",
     "vaul": "latest",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "vitest": "^latest",
+    "@testing-library/react": "^latest",
+    "@testing-library/jest-dom": "^latest",
+    "@testing-library/user-event": "^latest",
+    "jsdom": "^latest"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
-    "@types/node": "^22",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^22.19.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/uuid": "^10.0.0",
+    "@vitest/coverage-v8": "^4.0.15",
+    "@vitest/ui": "^4.0.15",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
+    "ts-jest": "^29.4.6",
     "tw-animate-css": "1.3.3",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^4.0.15"
   }
 }
