--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@hookform/resolvers": "^3.10.0",
-    "@mlc-ai/web-llm": "^0.2.80",
+    "@mui/x-charts": "^8.20.0",
     "@radix-ui/react-accordion": "latest",
     "@radix-ui/react-alert-dialog": "latest",
     "@radix-ui/react-aspect-ratio": "latest",
@@ -41,7 +43,7 @@
     "@shadcn/ui": "^0.0.4",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "latest",
-    "@supabase/supabase-js": "^2.86.0",
+    "@supabase/supabase-js": "^2.76.1",
     "@vercel/analytics": "1.3.1",
     "ai": "5.0.60",
     "autoprefixer": "^10.4.20",
@@ -56,7 +58,6 @@
     "next": "^15.5.4",
     "next-themes": "latest",
     "node.js": "^0.0.1-security",
-    "openai": "^6.9.1",
     "react": "^19",
     "react-day-picker": "latest",
     "react-dom": "^19",
@@ -73,22 +74,13 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.0",
-    "@types/jest": "^30.0.0",
-    "@types/node": "^22.19.1",
+    "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/uuid": "^10.0.0",
-    "@vitest/coverage-v8": "^4.0.15",
-    "@vitest/ui": "^4.0.15",
-    "jest": "^30.2.0",
-    "jest-environment-jsdom": "^30.2.0",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
-    "ts-jest": "^29.4.6",
     "tw-animate-css": "1.3.3",
-    "typescript": "^5",
-    "vitest": "^4.0.15"
+    "typescript": "^5"
   }
 }
