--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "next": "^15.5.4",
     "next-themes": "latest",
     "node.js": "^0.0.1-security",
+    "openai": "^6.9.1",
     "react": "^19",
     "react-day-picker": "latest",
     "react-dom": "^19",
